Exercises Through Data Viz 2
Exercises through Data Viz 2.  Forgot to upload a few of the last assignments

--- a/09-Mapping/interactive-mapping.ipynb
+++ b/09-Mapping/interactive-mapping.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -2240,7 +2240,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#merge lex_routes destinations with route sources to pick up the first level of flights\n",
