--- a/18-Design and Classes/Classes.ipynb
+++ b/18-Design and Classes/Classes.ipynb
@@ -23,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# we can define a type of object called a point\n",
@@ -39,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Point at 0x25928fde7b8>"
+       "<__main__.Point at 0x57bbe10>"
       ]
      },
      "execution_count": 2,
@@ -55,18 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# we can give it attributes using dot notation\n",
+    "# we can give it attributes (variables) using dot notation\n",
     "p.x = 3.0\n",
     "p.y = 4.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -75,19 +79,19 @@
        "3.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# and access those attributes also using dot notation\n",
+    "# and access those attributes (variables) also using dot notation\n",
     "p.x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +100,7 @@
        "4.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,8 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# we can define methods that accept an instance as an argument\n",
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# classes can include instances of other classes as attributes\n",
@@ -146,8 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "l = Line()\n",
@@ -163,8 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# instances can be return values\n",
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -195,29 +207,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "( 5 , 3.0 )\n",
+      "( 5 , 3.0 )\n",
+      "( 5 , 3.0 )\n"
+     ]
+    }
+   ],
    "source": [
+    "print_point(midpoint)\n",
     "# By default, assignment creates an alias!\n",
     "mp2 = midpoint\n",
     "mp2.x = 5\n",
     "\n",
-    "# What is the value of midpoint?  "
+    "# What is the value of midpoint?  \n",
+    "print_point(mp2)\n",
+    "print_point(midpoint)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We use pointers to save memory from copying and pasting (an expensive operation) variables.  We would like to point to the object instead."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "( 5 , 3.0 )\n",
+      "( 100 , 3.0 )\n"
+     ]
+    }
+   ],
    "source": [
     "# If you need to get around this, use copy:\n",
     "import copy\n",
     "mp3 = copy.copy(midpoint)\n",
     "mp3.x = 100\n",
     "\n",
-    "# What is the value of midpoint?"
+    "# What is the value of midpoint?\n",
+    "print_point(midpoint)\n",
+    "print_point(mp3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Point at 0x69e9048>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "midpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Point at 0x69e9048>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mp2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Point at 0x69e5908>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mp3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notice that mp2 and midpoint are at the same memory location, yet mp3 is different (a copy)."
    ]
   },
   {
@@ -233,8 +343,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# define a class\n",
@@ -246,8 +358,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def print_time(t):\n",
@@ -256,8 +370,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# define a function\n",
@@ -266,12 +382,20 @@
     "    sum.hour = t1.hour + t2.hour\n",
     "    sum.minute = t1.minute + t2.minute\n",
     "    sum.second = t1.second + t2.second\n",
+    "    while(sum.second>60):\n",
+    "        sum.second = sum.second-60\n",
+    "        sum.minute = sum.minute+1\n",
+    "    while(sum.minute>60):\n",
+    "        sum.minute = sum.minute-60\n",
+    "        sum.hour = sum.hour+1\n",
+    "    while(sum.hour>=24):\n",
+    "        sum.hour = sum.hour-24\n",
     "    return sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -315,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10:55:10\n"
+      "10:55:0\n"
      ]
     }
    ],
@@ -342,22 +466,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# define a function\n",
+    "def add_time(t1, t2):\n",
+    "    sum = Time()\n",
+    "    sum.hour = t1.hour + t2.hour\n",
+    "    sum.minute = t1.minute + t2.minute\n",
+    "    sum.second = t1.second + t2.second\n",
+    "    return sum"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# modifier\n",
@@ -373,15 +511,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9:45:0\n",
-      "9:46:15\n"
+      "9:47:30\n",
+      "9:48:45\n"
      ]
     }
    ],
@@ -402,10 +540,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# same mistake as first.. while loop or modulus will take care of it\n",
+    "def increment(time, seconds):\n",
+    "    time.second += seconds\n",
+    "    while time.second >= 60:\n",
+    "        time.second -= 60\n",
+    "        time.minute += 1\n",
+    "    while time.minute >= 60:\n",
+    "        time.minute -= 60\n",
+    "        time.hour += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -450,8 +600,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# previously we had a print_time() method.  \n",
@@ -469,8 +621,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start = Time()\n",
@@ -481,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -501,8 +655,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Note that in the latter, the object is automatically passed as the first argument\n",
@@ -519,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -536,8 +692,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# you can add methods that do more complicated stuff, including modify the object itself\n",
@@ -563,7 +721,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start = Time()\n",
@@ -574,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -604,8 +764,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -633,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -738,11 +900,11 @@
      "evalue": "unsupported operand type(s) for +=: 'float' and 'str'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-79-d00db81c0fd5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m# what about a string\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mt2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mincrement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'30'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mt2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_time\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-72-16de322f7c36>\u001b[0m in \u001b[0;36mincrement\u001b[0;34m(self, seconds)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mincrement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseconds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msecond\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mseconds\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msecond\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m60\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msecond\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[1;36m60\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'float' and 'str'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-76-d00db81c0fd5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# what about a string\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mt2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mincrement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'30'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mt2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_time\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-71-16de322f7c36>\u001b[0m in \u001b[0;36mincrement\u001b[1;34m(self, seconds)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mincrement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseconds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msecond\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mseconds\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msecond\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m60\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msecond\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[1;36m60\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'float' and 'str'"
      ]
     }
    ],
@@ -762,17 +924,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Str to Int function inside"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "class Time(object):\n",
+    "    \"\"\"Represents the time of day.\n",
+    "    attributes: hour, minute, second\n",
+    "    \"\"\"\n",
+    "    def __init__(self, hour=0, minute=0, second=0):\n",
+    "        if(type(hour)==\"str\"):\n",
+    "            self.hour = int(hour)\n",
+    "        else:\n",
+    "            self.hour = hour\n",
+    "            \n",
+    "        if(type(minute)==\"str\"):\n",
+    "            self.minute = int(minute)\n",
+    "        else:\n",
+    "            self.minute = minute\n",
+    "            \n",
+    "        if(type(second)==\"str\"):\n",
+    "            self.second = int(second)\n",
+    "        else:\n",
+    "            self.second = second\n",
+    "    \n",
+    "    def print_time(self):\n",
+    "        print(str(self.hour) + ':' + str(self.minute) + ':' + str(self.second))\n",
+    "        \n",
+    "    def increment(self, seconds):\n",
+    "        self.second = int(self.second)\n",
+    "        self.second += int(seconds)\n",
+    "        if int(self.second) >= 60:\n",
+    "            self.second -= 60\n",
+    "            self.minute += 1\n",
+    "        if int(self.minute) >= 60:\n",
+    "            self.minute -= 60\n",
+    "            self.hour += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9:45:43\n"
+     ]
+    }
+   ],
+   "source": [
+    "t2 = Time(\"9\", \"45\", \"13\")\n",
+    "t2.increment(\"30\")\n",
+    "t2.print_time()"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -786,7 +1008,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
